# workflow_api

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  settings.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: add_nodes_users__2024_04_08_1640.py  create_models_2024_04_24_1401.py  create_models_2024_04_24_1642.py  create_permission__2024_04_24_1557.py  create_polymorphic__2024_04_25_1647.py
app/dals/: users.py  workflows.py
app/models/: __init__.py  base.py  nodes.py  users.py  workflows.py
app/routers/: auth.py  workflows.py
app/serializers/: auth.py  base.py  users.py  workflows.py
app/services/: auth.py  users.py  workflows.py
app/utils/: auth.py
core/: db.py  main.py
tests/: conftest.py  utils.py
tests/workflows/: test_create.py  test_delete.py  test_update.py  utils.py
