[tool.poetry]
name = "workflow_api"
version = "0.1.0"
description = ""
authors = ["Daryna Rodicheva <rdchvd29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
SQLAlchemy = "^2.0.29"
SQLAlchemy-Utils = "^0.41.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
